--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -17,7 +17,6 @@ phases:
       # Available Environment Variables:
       #  https://docs.aws.amazon.com/codebuild/latest/userguide/build-env-ref-env-vars.html
       - printenv | sort
-      - yum -y install maven
 
   pre_build:
     commands:
@@ -33,8 +32,8 @@ phases:
       - echo ${VPC_ID}
       - sed --in-place='bak' --expression="s|VPC_ID|${VPC_ID}|" aws/parameters/cloudformation.parameters.*.json
 
-      - SUBNETS=$(aws ec2 describe-subnets | jq '.Subnets[].SubnetId' | grep '^"subnet-[a-fA-F0-9]\{8\}"$' | tr -d '\n' | sed -e 's/""/ /g' -e 's/"//g')
-      - echo $SUBNETS
+      - SUBNET_IDS=$(aws ec2 describe-subnets | jq '.Subnets[].SubnetId' | grep '^"subnet-[a-fA-F0-9]\{8\}"$' | tr -d '\n' | sed -e 's/""/ /g' -e 's/"//g')
+      - echo SUBNET_IDS
       - sed --in-place='bak' --expression="s|SUBNET_IDS|${SUBNET_IDS}|" aws/parameters/cloudformation.parameters.*.json
 
       # Put the URL to the released image into the parameter file so it is available to the deploy stage to invoke.
@@ -52,7 +51,11 @@ phases:
 
       # Build the docker image.
       - cd $CODEBUILD_SRC_DIR
+
+      # Install here rather than in pre-build because it is extremely verbose, and we want to more easily see the JSON printed out above.
+      - yum -y install maven
       - mvn clean compile assembly:single -Pquickrun
+
       - docker build --tag "$RELEASE_IMAGE_URL" --file ./Dockerfile .
 
       # Login to the ECR Container Registry and push up the image.
