Setting LoadBalancer type to network.

--- a/aws/cloudformation.template.yml
+++ b/aws/cloudformation.template.yml
@@ -232,6 +232,7 @@ Resources:
           Value: '900'    # Maximum lambda function time.
       SecurityGroups:
         - !Ref LoadBalancerSG
+      Type: network
 
   # Port 443 Listener. Default rule is to forward to the Target Group
   LBListener:
